ingress.yaml
# ExternalName Services for monitoring instance (docker-compose)
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: monitoring
spec:
  type: ExternalName
  externalName: 10.0.26.75
  ports:
    - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: monitoring
spec:
  type: ExternalName
  externalName: 10.0.26.75
  ports:
    - port: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-external
  namespace: monitoring
spec:
  type: ExternalName
  externalName: 10.0.26.75
  ports:
    - port: 9093
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: sensor-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: sensor-api.kentaiwami.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sensor-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: sensor-view
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: sensor-view.kentaiwami.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sensor-view
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: neko
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: neko.kentaiwami.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neko
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-ipallow@kubernetescrd
spec:
  rules:
    - host: grafana.kentaiwami.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-external
                port:
                  number: 3000
    - host: prometheus.kentaiwami.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-external
                port:
                  number: 9090
    - host: alertmanager.kentaiwami.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-external
                port:
                  number: 9093
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipallow
  namespace: monitoring
spec:
  ipAllowList:
    sourceRange:
      - ${ALLOWED_IP}/32
